--- a/web/templates/producto.html
+++ b/web/templates/producto.html
@@ -78,7 +78,7 @@
                     <a id="prod-showdesc" class="prod-excerpt-more" href="#">read more</a>
                 </p>
                 <div class="prod-add">
-                    <form action="#" method="post">
+                    <form action="{% url 'web:agregarCarrito' productos.id %}" method="post">
                         {% csrf_token %}
                         <div class="variations">
                             <div class="variations-row">
