--- a/web/templates/includes/header.html
+++ b/web/templates/includes/header.html
@@ -23,7 +23,7 @@
                 </a>
                 <ul class="h-profile-links">
                     <li><a href="/login">Login / Registro</a></li>
-                    <li><a href="/logout">Logout</a></li>
+                    <li><a href="{% url 'web:logoutUsuario' %}">Logout</a></li>
                 </ul>
             </li>
 
